--- a/index.html
+++ b/index.html
@@ -5,7 +5,35 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/r.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>reward</title>
+
+  <!-- Meta -->
+  <meta name="description" content="Consulta recompensas de Clash Royale de forma sencilla desde reward *.">
+  <link rel="canonical" href="https://reward-70c.pages.dev/">
+  <meta name="robots" content="index, follow">
+  <meta name="author" content="baa4ts (github.com/baa4ts)">
+
+  <!-- Open Graph -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="reward * | Recompensas de Clash Royale">
+  <meta property="og:description"
+    content="Consulta y accede a recompensas de Clash Royale de forma sencilla desde reward *.">
+  <meta property="og:url" content="https://reward-70c.pages.dev/">
+  <meta property="og:site_name" content="reward *">
+  <meta property="og:image"
+    content="https://cdn-assets-eu.frontify.com/s3/frontify-enterprise-files-eu/eyJwYXRoIjoic3VwZXJjZWxsXC9maWxlXC9rbjl2WFpKM1BmSGE1RThVaXU1ai5wbmcifQ:supercell:4SGfQYDa2YSUga47FcUm1g084piY5wFRFwNfChxi-7g">
+  <meta property="og:locale" content="es_UY">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="reward * | Recompensas de Clash Royale">
+  <meta name="twitter:description" content="Accede a recompensas de Clash Royale de manera simple desde reward *.">
+  <meta name="twitter:image"
+    content="https://cdn-assets-eu.frontify.com/s3/frontify-enterprise-files-eu/eyJwYXRoIjoic3VwZXJjZWxsXC9maWxlXC9rbjl2WFpKM1BmSGE1RThVaXU1ai5wbmcifQ:supercell:4SGfQYDa2YSUga47FcUm1g084piY5wFRFwNfChxi-7g">
+
+
+  <!-- Analitica - Umami -->
+  <script defer src="https://cloud.umami.is/script.js" data-website-id="f34171b3-67f5-4215-9c06-8cd9cf42560f"></script>
+  <title>reward * | Recompensas de Clash Royale</title>
 </head>
 
 <body>
